--- a/tutorial-ms-consumer-kafka/src/main/resources/application.properties
+++ b/tutorial-ms-consumer-kafka/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.kafka.consumer.bootstrap-servers=127.0.0.1:9092
+spring.kafka.consumer.bootstrap-servers=localhost:9093
 spring.kafka.consumer.auto-offset-reset=earliest
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
