--- a/tutorial-rest-producer-kafka/src/main/resources/application.properties
+++ b/tutorial-rest-producer-kafka/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-spring.kafka.producer.bootstrap-servers=127.0.0.1:9092
+spring.kafka.producer.bootstrap-servers=localhost:9093
 spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+server.port=8081
 
